--- a/Style.css
+++ b/Style.css
@@ -20,7 +20,7 @@ ul {
 
 a{
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 li {
@@ -88,7 +88,6 @@ main {
 .place{
     width: 33.33%;
     text-align: center;
-   
 }
 
 h1{
