--- a/Style.css
+++ b/Style.css
@@ -39,12 +39,14 @@ h1 {
     color: black;
     text-align: center;
     background-color: white;
+    margin: 20px;
 }
 
 h3 {
     color: black;
     text-align: center;
     background-color: white;
+    margin: 50px;
 }
 
 img {
@@ -136,6 +138,12 @@ h4{
     align-items: center;
     /* width: 50px; */
     /* padding-left: 240px; */
+}
+
+.horizontal{
+    margin: 15px;
+    margin-top: 100px;
+    border: 4px solid black;
 }
 
 .fact{
