--- a/css/Style.css
+++ b/css/Style.css
@@ -52,10 +52,13 @@ h3 {
 img {
     width: 70%;
     height: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     display: block;
 }
+
+/* #treeroad.treeroad{
+    margin-top: 50px;
+} */
 
 #main {
     margin: 0 auto;
@@ -144,6 +147,7 @@ h4{
     margin: 15px;
     margin-top: 100px;
     border: 4px solid black;
+    background-color: rgb(119, 88, 88);
 }
 
 .fact{
