--- a/css/Style.css
+++ b/css/Style.css
@@ -18,6 +18,7 @@ ul {
     text-align: center;
     display: flex;
     justify-content: center;
+    color: white;
 }
 
 a{
@@ -56,7 +57,7 @@ h3 {
 
 img {
     width: 70%;
-    height: 400px;
+    height: 600px;
     margin: 0 auto;
     display: block;
 }
@@ -111,6 +112,7 @@ h4{
     text-align: center;
     font-family: cursive;
     font-weight: bolder;
+    color: white;
 }
 
 #leaf{
